--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 
 # dependencies
 /api/venv
+/venv
 /node_modules
 /.pnp
 .pnp.js
@@ -13,7 +14,8 @@
 /build
 
 # Weight
-/api/weights
+/api/classification/weights
+/api/object_det/weights
 
 # misc
 .DS_Store
